# libspecter

./: .gitignore  Cargo.toml  Makefile  README.md  specter.h
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  rust.md  usage.md
src/: config.rs  ffi.rs  lib.rs
src/memory/: mod.rs
src/memory/allocation/: mod.rs  shellcode.rs
src/memory/ffi/: mach_exc.rs  mod.rs
src/memory/info/: code_cave.rs  image.rs  macho.rs  mod.rs  protection.rs  scan.rs  symbol.rs
src/memory/manipulation/: backup.rs  checksum.rs  hook.rs  mod.rs  patch.rs  rw.rs
src/memory/platform/: breakpoint.rs  mod.rs  thread.rs
src/utils/: logger.rs  mod.rs
