[package]
name = "specter"
version = "0.1.0"
edition = "2024"

[lib]
name = "specter"
crate-type = ["staticlib"]

[[bin]]
name = "spectre_dev"
path = "src/main.rs"

[features]
dev_release = []

[dependencies]
mach2 = "0.4"
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"
libc = "0.2"
hex = "0.4"
dashmap = "6"
jit-assembler = { version = "0.3", default-features = false, features = ["aarch64"] }
