[package]
name = "specter-mem"
version = "1.0.0"
edition = "2024"
description = "ARM64 memory manipulation framework for iOS/macOS — inline hooking, stealth code patching, hardware breakpoints, and shellcode loading"
license = "MIT"
repository = "https://github.com/Batchhh/libspecter"
readme = "README.md"
keywords = ["arm64", "ios", "macos", "memory", "hooking"]
categories = ["development-tools::ffi", "os::macos-apis", "memory-management"]
documentation = "https://docs.rs/specter-mem"
exclude = ["target/", "docs/"]

[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin"]

[lib]
name = "specter"
crate-type = ["staticlib"]

[features]
dev_release = []

[dependencies]
mach2 = "0.4"
once_cell = "1"
parking_lot = "0.12"
thiserror = "1"
libc = "0.2"
hex = "0.4"
dashmap = "6"
jit-assembler = { version = "0.3", default-features = false, features = ["aarch64"] }
